--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"dotenv": "^16.3.1",
+		"firebase": "^10.7.1",
 		"svelte-collapsible": "^0.3.0"
 	}
 }
