--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/color": "^3.0.6",
 		"carbon-icons-svelte": "^12.4.2",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
@@ -26,6 +27,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"color": "^4.2.3",
 		"dotenv": "^16.3.1",
 		"firebase": "^10.7.1",
 		"svelte-collapsible": "^0.3.0"
