--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"color": "^4.2.3",
 		"dotenv": "^16.3.1",
 		"firebase": "^10.7.1",
-		"svelte-collapsible": "^0.3.0"
+		"js-file-download": "^0.4.12",
+		"svelte-collapsible": "^0.3.0",
+		"svelte-markdown": "^0.4.1"
 	}
 }
